--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         }
     ],
     "require": {
-        "apikr/aligo-sms": "^0.7.1",
-        "illuminate/support": "^5.4"
+        "illuminate/support": "^5.4",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
